--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ dev ]
   schedule:
-    - cron: '30 8 * * 5'
+    - cron: '0 0 * * 1'
 
 jobs:
   analyze:
@@ -27,19 +27,16 @@ jobs:
 
     # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
     # If this step fails, then you should remove it and run the build manually (see below)
-    #- name: Autobuild
-    #  uses: github/codeql-action/autobuild@v1
-
-    # ℹ️ Command-line programs to run using the OS shell.
-    # 📚 https://git.io/JvXDl
+    - name: Autobuild
+      uses: github/codeql-action/autobuild@v1
 
     # ✏️ If the Autobuild fails above, remove it and uncomment the following three lines
     #    and modify them (or add more) to build your code if your project
     #    uses a compiled language
 
-    #- run: |
-    #   make bootstrap
-    #   make release
+    - run: |
+       dotnet build
 
     - name: Perform CodeQL Analysis
+      uses: github/codeql-action/analyze@v1
       uses: github/codeql-action/analyze@v1
