--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -2,9 +2,9 @@ name: "CodeQL - Code Analysis"
 
 on:
   push:
-    branches: [ dev ]
+    branches: [ main ]
   pull_request:
-    branches: [ dev ]
+    branches: [ main ]
   schedule:
     - cron: '0 0 * * 1'
 
@@ -34,8 +34,8 @@ jobs:
     #    and modify them (or add more) to build your code if your project
     #    uses a compiled language
 
-    - run: |
-       dotnet build
+    #- run: |
+    #   dotnet build
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
