--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -11,6 +11,8 @@ on:
     paths-ignore:
       - '**/*.md'
       - '**/*.yml'
+  workflow_dispatch:
+    branches: [ main, dev ]
   schedule:
     - cron: '0 0 * * 1'
 
