--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -38,7 +38,7 @@ jobs:
         languages: ${{ matrix.language }}
         
     - name: Build
-      run: dotnet build --project viceserver-modpack-installer-c#.csproj
+      run: dotnet build viceserver-modpack-installer-c#.csproj
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
