--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -37,8 +37,8 @@ jobs:
       with:
         languages: ${{ matrix.language }}
         
-    - name: Build
-      run: dotnet build ../../viceserver-modpack-installer-c#.csproj
+    - run: |
+        dotnet build /p:UseSharedCompilation=false
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
