--- a/.github/workflows/crunch42-analysis.yml
+++ b/.github/workflows/crunch42-analysis.yml
@@ -20,7 +20,7 @@ on:
 
 jobs:
   rest-api-static-security-testing:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
 
