--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -43,7 +43,7 @@ jobs:
         dotnet-version: 5.0.x
 
     - run: |
-        dotnet build viceserver-modpack-installer-c#.csproj
+        dotnet build ./viceserver-modpack-installer-c#.csproj
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
