--- a/viceserver-modpack-installer-c#.csproj
+++ b/viceserver-modpack-installer-c#.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Octokit" Version="0.50.0" />
     <PackageReference Include="Terminal.Gui" Version="0.90.3" />
   </ItemGroup>
 
